--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,41 @@
+version: "3.9"
+
 services:
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
+    container_name: p7-backend
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    volumes:
-      - chroma_data:/app/chroma_db
+      # Configure backend via env vars as needed
+      # OPENAI_API_KEY: ${OPENAI_API_KEY}
+      # OPENAI_MODEL: ${OPENAI_MODEL:-gpt-5}
+      # EMBEDDINGS_MODEL: ${EMBEDDINGS_MODEL:-text-embedding-3-large}
+      # VECTOR_STORE: ${VECTOR_STORE:-chroma}
+      # DATA_DIR: ${DATA_DIR:-data}
+      # VECTOR_DIR: ${VECTOR_DIR:-vectorstore}
+      # ALLOW_ORIGINS: ${ALLOW_ORIGINS:-*}
+      PYTHONUNBUFFERED: "1"
     ports:
       - "8000:8000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    volumes:
+      - ./backend/data:/app/data
+      - ./backend/vectorstore:/app/vectorstore
+    restart: unless-stopped
 
   frontend:
     build:
-      context: .
-      dockerfile: frontend/Dockerfile
-    environment:
-      - VITE_API_BASE_URL=http://localhost:8000
-    ports:
-      - "5173:80"
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        # Ensure built app calls the backend through Nginx proxy prefix
+        - VITE_API_BASE=/api
+    container_name: p7-frontend
     depends_on:
       - backend
+    ports:
+      - "80:80"
+    restart: unless-stopped
 
-volumes:
-  chroma_data:
+ # Data directories created on host for persistence
+  volumes: {}
