--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,8 @@ server {
     # Serve the built frontend
     root /usr/share/nginx/html;
     index index.html;
+    # Allow larger uploads (adjust as needed)
+    client_max_body_size 100m;
 
     # Proxy API calls to the backend service in the same Docker network
     location /api/ {
@@ -14,6 +16,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # Increase timeouts for long-running uploads/indexing
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        send_timeout 600s;
     }
 
     # History API fallback for SPA routes
