--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,8 +14,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-dev \
     pkg-config \
     libgl1 \
+    libgomp1 \
     tesseract-ocr \
     libjpeg62-turbo-dev \
+    libpng-dev \
+    libtiff5 \
+    libopenjp2-7 \
     zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
@@ -23,7 +27,6 @@ WORKDIR /app
 
 # Copy backend requirements from the project root context
 COPY backend/requirements.txt /app/requirements.txt
-# Ensure latest pip tooling, then install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
     pip install --no-cache-dir -r /app/requirements.txt
 
