--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,12 +10,12 @@ pillow
 sentence-transformers
 scikit-learn
 pytesseract
-openai>=1.0.0
-chromadb>=0.4.0
-langchain>=0.1.0
-langchain-openai>=0.1.0
-langchain-community>=0.0.20
-langchain-chroma>=0.1.0
+openai
+chromadb
+langchain
+langchain-openai
+langchain-community
+langchain-chroma
 tiktoken
 fastapi
 uvicorn
