--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,22 @@
-streamlit
-setuptools
-wheel
-python-dotenv
-pdfplumber
-python-docx
-python-pptx
-pandas
-pillow
-sentence-transformers
-scikit-learn
-pytesseract
-openai
-chromadb
-langchain
-langchain-openai
-langchain-community
-langchain-chroma
-tiktoken
-fastapi
-uvicorn
-python-multipart
+streamlit==1.37.1
+setuptools>=68.0.0
+wheel>=0.41.0
+python-dotenv==1.0.1
+pdfplumber==0.11.4
+python-docx==1.1.2
+python-pptx==1.0.2
+pandas==2.2.2
+pillow==10.4.0
+sentence-transformers==2.7.0
+scikit-learn==1.5.1
+pytesseract==0.3.13
+openai==1.45.0
+chromadb==0.5.4
+langchain==0.2.14
+langchain-openai==0.1.21
+langchain-community==0.2.12
+langchain-chroma==0.1.2
+tiktoken==0.7.0
+fastapi==0.115.0
+uvicorn==0.30.6
+python-multipart==0.0.9
