--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
-setuptools
-wheel
-python-dotenv
-pdfplumber
-openai
-langchain
-langchain-openai
-fastapi
-uvicorn
-python-multipart
+setuptools>=68.0.0
+wheel>=0.41.0
+python-dotenv==1.0.1
+pdfplumber==0.11.4
+openai==1.45.0
+langchain==0.2.14
+langchain-openai==0.1.21
+fastapi==0.115.0
+uvicorn==0.30.6
+python-multipart==0.0.9
